Port ili2ofgdb to filegdb4j: JDBC storage engine, IOM geometry bridge, domains and relationship classes without core changes