@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -21,7 +22,7 @@ final class OfgdbFileSnapshot {
         if (parent != null) {
             return parent.resolve(snapshotName);
         }
-        return Path.of(snapshotName);
+        return Paths.get(snapshotName);
     }
 
     static void createSnapshot(Path sourcePath, Path snapshotPath) throws IOException {
